# qc_exciton_LCC

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: AGENTS-checkpoint.md
docs/: REPO_SUMMARY.md  WORKFLOW.md  codex-handoff.md  conversation_log_2026-03-02.md  conversation_log_2026-03-03.md  conversation_log_2026-03-06.md  conversation_log_2026-03-11.md  exciton_resource_table_lc200_m2_d2.tex  exciton_resource_table_m2_d2.tex  exciton_resource_table_m2_d3.tex  exciton_resource_table_m3_d3.tex  ld_feasible_table_d2_rc3_rloc1.tex  pennylane_qsvt_exciton_table_m2_d2_dense_diag_wv.tex  pennylane_qsvt_exciton_table_m2_d2_dense_diag_wv_L8_test.tex  pennylane_qsvt_exciton_table_m2_d2_dense_diag_wv_d1_no_runtime_cutoff.tex  qsvt_exciton_table_m2_d2_dense_diag_wv.tex  qsvt_exciton_table_m2_d2_fixed_locality_rc0_lc_d.tex  qsvt_exciton_table_m2_d2_fixed_locality_rc0_lc_d_random_nonzero.tex  qsvt_exciton_table_m2_d2_fixed_locality_rc3_lc_d.tex  qsvt_exciton_table_m2_d2_lc_eq_drc.tex  qsvt_exciton_table_m2_d2_lc_eq_drc_large_q300_1week.tex  qualtran_block_prep_operations_report.md  qualtran_block_prep_report.md  rcmax_table_L_eq_dRc_dle10.tex
examples/: exciton_workflow.py  mos2_lmo_workflow.py
experiments/: controlled_block_encoding_test.ipynb  count_exciton_block_encoding_complexity.py  exciton_hamiltonian_block_encoding_benchmark.ipynb  fit_two_particle_sparse_oracle_scaling.py  generate_exciton_latex_tables.py  generate_qsvt_exciton_dense_diag_wv_table.py  generate_qsvt_exciton_lc_d_table_fixed_locality.py  generate_qsvt_exciton_lc_eq_drc_table.py  (+11 more)
(+126 files in other folders)
